--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-446.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1010.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-931.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-340.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-397.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-989.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
