--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.25MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇫🇷 法国-629.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-949.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-211.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-940.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇫🇷 法国-872.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-842.2KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇰🇷 韩国-1.44MB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.86MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-908.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-417.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇺🇸 美国-863.0KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-581.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-492.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-310.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-412.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-457.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-629.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-872.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-863.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-629.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-872.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-863.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-629.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-872.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-863.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-629.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-872.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-863.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-629.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-872.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-863.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-629.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-872.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-863.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-629.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-872.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-863.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-581.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
