--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-417.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-666.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-402.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-908.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-903.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-856.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-697.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1002.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-932.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-949.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-272.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.90, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.90, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: 85.208.108.90, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-2.48MB/s(Youtube:不良林), server: 85.208.108.90, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-666.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-856.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-666.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-856.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-666.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-856.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-666.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-856.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-666.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-856.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-666.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-856.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-666.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-856.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
